Updated the theme to use CSS for image spacing in blog posts. Fixed a photo file name with spaces

--- a/overlay/var/www/peterlyons.com/persblog/wp-content/themes/fluid-blue/style.css
+++ b/overlay/var/www/peterlyons.com/persblog/wp-content/themes/fluid-blue/style.css
@@ -48,6 +48,11 @@ img {
 	border:0;
 }
 
+img.blog {
+    margin: 20px;
+    display: block;
+}
+
 input {
 	font-size:1.2em;
 }
